Arreglado de la tabulacion de la pagina comoComprar.html

--- a/pages/comoComprar.html
+++ b/pages/comoComprar.html
@@ -56,29 +56,29 @@
         <div class="row">
             <div class="col-12">
                 <!-- HOW TO BUY HEADER -->
-                <h2 class="pb-4 howToBuy__title text-center">PROCESO DE COMPRA</h2>
+                <h2 class="pb-4 pt-4 howToBuy__title text-center">PROCESO DE COMPRA</h2>
             </div>
         </div>
         <div class="row">
             <!-- ADD TO CART -->
             <div class="col-12 p-2 d-flex justify-content-center align-items-center howToBuy__addToCart">
-                <img src="../images/bagIcon.png" alt="Icono de bolso de compra" class="d-inline-block pe-2">
-                <p class="howToBuy__text d-inline-block m-0">Seleccioná los productos que querés y hacé click en "agregar al carrito".</p>
+                <img src="../images/bagIcon.png" alt="Icono de bolso de compra" class="d-inline-block pe-3">
+                <p class="howToBuy__text d-inline-block m-0 w-50">Seleccioná los productos que querés y hacé click en "agregar al carrito".</p>
             </div>
             <!-- VIEW SHOP CART -->
             <div class="col-12 p-2 d-flex justify-content-center align-items-center howToBuy__shopCart">
-                <img src="../images/eyeIcon.png" alt="Icono de ojo" class="d-inline-block pe-2">
-                <p class="howToBuy__text d-inline-block m-0">Una vez que finalizaste tu compra cliqueá en “Ver Carrito”. Allí podrás visualizar un detalle de tu pedido.</p>
+                <img src="../images/eyeIcon.png" alt="Icono de ojo" class="d-inline-block pe-3">
+                <p class="howToBuy__text d-inline-block m-0 w-50">Una vez que finalizaste tu compra cliqueá en “Ver Carrito”. Allí podrás visualizar un detalle de tu pedido.</p>
             </div>
             <!-- FINISH BUY -->
             <div class="col-12 p-2 d-flex justify-content-center align-items-center howToBuy__addData">
-                <img src="../images/ticketIcon.png" alt="Icono de Ticket" class="d-inline-block pe-2">
-                <p class="howToBuy__text d-inline-block m-0">Luego cliqueá sobre finalizar compra y completá con tus datos.</p>
+                <img src="../images/ticketIcon.png" alt="Icono de Ticket" class="d-inline-block pe-3">
+                <p class="howToBuy__text d-inline-block m-0 w-50">Luego cliqueá sobre finalizar compra y completá con tus datos.</p>
             </div>
             <!-- DATA SEND -->
             <div class="col-12 p-2 d-flex justify-content-center align-items-center howToBuy__email">
-                <img src="../images/emailIcon.png" alt="Icono de Email" class="d-inline-block pe-2">
-                <p class="howToBuy__text d-inline-block m-0">Hacé clic en enviar pedido, recibiremos un mail con tus datos y tu orden. Nos estaremos contactando a la brevedad para ultimar detalles del envío.</p>
+                <img src="../images/emailIcon.png" alt="Icono de Email" class="d-inline-block pe-3">
+                <p class="howToBuy__text d-inline-block m-0 w-50">Hacé clic en enviar pedido, recibiremos un mail con tus datos y tu orden. Nos estaremos contactando a la brevedad para ultimar detalles del envío.</p>
             </div>
         </div>
     </div>
@@ -90,7 +90,7 @@
         <div class="footer__brand col-6 col-sm-2 align-self-center">
             <!-- FOOTER BRAND -->
             <a href="../index.html">
-                <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+                <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-4 grow" alt="Logo de La Tienda de Lola">
             </a>
         </div>
         <!-- FOOTER INFORMATION -->
@@ -103,15 +103,15 @@
         <div class="footer__map col-6 col-sm-4 align-self-center">
             <!-- FOOTER MAP -->
             <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322" height="200" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
         </div>
         <!-- FOOTER BUTTONS -->
         <div class="footer__buttons col-6 col-sm-1 d-flex flex-column justify-content-center align-self-center">
             <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
-            <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-100" alt="Icono de instagram">
+                <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-100 grow" alt="Icono de instagram">
             </a>
             <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank">
-            <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-100" alt="Icono de Facebook">
+                <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-100 grow" alt="Icono de Facebook">
             </a>
         </div>
         </div>
