Arreglado de la tabulacion de la pagina contacto.html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -83,7 +83,7 @@
         <div class="footer__brand col-6 col-sm-2 align-self-center">
             <!-- FOOTER BRAND -->
             <a href="../index.html">
-                <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+                <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-4 grow" alt="Logo de La Tienda de Lola">
             </a>
         </div>
         <!-- FOOTER INFORMATION -->
@@ -101,10 +101,10 @@
         </div>
         <!-- FOOTER BUTTONS -->
         <div class="footer__buttons col-6 col-sm-1 d-flex flex-column justify-content-center align-self-center">
-            <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
+            <a href="https://www.instagram.com/la.tiendadelola/" target="_blank" class="grow">
             <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-100" alt="Icono de instagram">
             </a>
-            <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank">
+            <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank" class="grow">
             <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-100" alt="Icono de Facebook">
             </a>
         </div>
