--- a/pages/comoComprar.html
+++ b/pages/comoComprar.html
@@ -80,6 +80,10 @@
                 <img src="../images/emailIcon.png" alt="Icono de Email" class="d-inline-block pe-3">
                 <p class="howToBuy__text d-inline-block m-0 w-50">Hacé clic en enviar pedido, recibiremos un mail con tus datos y tu orden. Nos estaremos contactando a la brevedad para ultimar detalles del envío.</p>
             </div>
+            <!-- REDIRECT TO CONTACT -->
+            <div class="col-12 p-2 d-flex justify-content-center howToBuy__contact">
+                <a href="contacto.html" class="howToBuy_text">Si existe algun problema, podes contactarnos rellenando este formulario</a>
+            </div>
         </div>
     </div>
     <!-- HOW TO BUY SECTION END -->
