Finalizado de Almohado Luli

--- a/pages/almohadonLuli.html
+++ b/pages/almohadonLuli.html
@@ -138,7 +138,7 @@
           <a href="../index.html">
             <img
               src="../images/laTiendaDeLolaLogo.png"
-              class="footer-brand__image img-fluid p-2"
+              class="footer-brand__image img-fluid p-4 grow"
               alt="Logo de La Tienda de Lola"
             />
           </a>
@@ -184,7 +184,7 @@
           <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
             <img
               src="../images/instagramIcon.png"
-              class="footer-buttons__instagram w-100"
+              class="footer-buttons__instagram w-100 grow"
               alt="Icono de instagram"
             />
           </a>
@@ -194,7 +194,7 @@
           >
             <img
               src="../images/facebookIcon.png"
-              class="footer-buttons__facebook w-100"
+              class="footer-buttons__facebook w-100 grow"
               alt="Icono de Facebook"
             />
           </a>
