Arreglado de comoComprar.html

--- a/pages/comoComprar.html
+++ b/pages/comoComprar.html
@@ -188,7 +188,9 @@
         </div>
         <!-- REDIRECT TO CONTACT -->
         <div class="col-12 p-2 d-flex justify-content-center howToBuy__contact">
-          <a href="contacto.html" class="howToBuy_text text-decoration-none pt-2 fs-6"
+          <a
+            href="contacto.html"
+            class="howToBuy_text text-decoration-none pt-2 fs-6 w-50 text-center"
             >Si existe algun problema, podes contactarnos rellenando este
             formulario</a
           >
