Agregado de iconos al title en todas las paginas y comentado de SEO

--- a/pages/comoComprar.html
+++ b/pages/comoComprar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Como Comprar - La Tienda de Lola</title>
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="shortcut icon" href="../images/LaTiendaDeLolaIcon.png"/>
     <meta
       name="description"
       content="Información de como se compra en la tienda online de La Tienda de Lola"
