--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <title>Contacto - La Tienda de Lola</title>
     <link rel="stylesheet" href="../css/main.css" />
     <meta name="description" content="Contactate con La Tienda de Lola" />
+    <link rel="shortcut icon" href="../images/LaTiendaDeLolaIcon.png"/>
     <meta
       name="keywords"
       content="LA TIENDA DE LOLA, TIENDA LOLA, LOLA TIENDA, MUEBLES, DECORACION, DECORACIÓN, HOGAR, DISEÑO, SERVILLETEROS, PORTA VELAS, MATES, ALMOHADONES, BACHAS DE CERAMICA, MESA DE COMEDOR, JUEGOS DE CAMASTROS, INTERIOR, EXTERIOR"
