--- a/pages/servilletero.html
+++ b/pages/servilletero.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Producto Uno - La Tienda de Lola</title>
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="shortcut icon" href="images/LaTiendaDeLolaIcon.png"/>
     <meta
       name="description"
       content="Producto Uno de muestra para La Tienda de Lola"
