Agregado de iconos al title en todas las paginas y comentado de SEO

--- a/pages/comoComprar.html
+++ b/pages/comoComprar.html
@@ -7,6 +7,7 @@
     <title>Como Comprar - La Tienda de Lola</title>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="shortcut icon" href="../images/LaTiendaDeLolaIcon.png"/>
+    <!-- SEO -->
     <meta
       name="description"
       content="Información de como se compra en la tienda online de La Tienda de Lola"
