--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre Nosotros - La Tienda de Lola</title>
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="shortcut icon" href="../images/LaTiendaDeLolaIcon.png"/>
+    <!-- SEO -->
     <meta
       name="description"
       content="La tienda de Lola es creada por Guadalupe en un 14 de diciembre del 2014 como una forma de expresar su estilo y su pasión por la decoración, el local se encuentra en el corazón del puerto de frutos donde se diseñan, restauran y crean muebles y objetos de decoración para el hogar."
