--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/main.css" />
     <meta name="description" content="Contactate con La Tienda de Lola" />
     <link rel="shortcut icon" href="../images/LaTiendaDeLolaIcon.png"/>
+    <!-- SEO -->
     <meta
       name="keywords"
       content="LA TIENDA DE LOLA, TIENDA LOLA, LOLA TIENDA, MUEBLES, DECORACION, DECORACIÓN, HOGAR, DISEÑO, SERVILLETEROS, PORTA VELAS, MATES, ALMOHADONES, BACHAS DE CERAMICA, MESA DE COMEDOR, JUEGOS DE CAMASTROS, INTERIOR, EXTERIOR"
