--- a/pages/tiendaOnline.html
+++ b/pages/tiendaOnline.html
@@ -7,6 +7,7 @@
     <title>Tienda Online - La Tienda de Lola</title>
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="shortcut icon" href="../images/LaTiendaDeLolaIcon.png"/>
+    <!-- SEO -->
     <meta
       name="description"
       content="La tienda Online de La Tienda de Lola te permite comprar todos los productos desde la comodidad de tu hogar"
